[tool.poetry]
name = "runpod-samples"
version = "0.1.0"
description = ""
authors = ["wellflat <wellflat@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
runpod = "^1.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
