[tool.poetry]
name = "runpod-samples"
version = "0.1.0"
description = ""
authors = ["wellflat <wellflat@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
runpod = "^1.6.2"
gql = {extras = ["all"], version = "^3.5.0"}
scikit-learn = "^1.5.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
runpod = "^1.6.2"
ruff = "^0.4.1"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["external/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100","D101","D103","T201"]

[tool.ruff.lint.isort]
force-single-line = false

[tool.ruff.lint.per-file-ignores]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
