[project]
name = "runpod-samples"
version = "0.1.0"
description = "RunPod training samples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gql[aiohttp]>=3.5.0",
    "hf-transfer>=0.1.8",
    "huggingface-hub>=0.26.3",
    "nvidia-ml-py>=12.560.30",
    "runpod>=1.7.5",
    "sentry-sdk[loguru]~=1.45.1",
]
